# framedrop

./: LICENSE  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: CNAME  index.html
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build_warnings.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  exif.rs  ingest.rs  lib.rs  main.rs  sync.rs  watcher.rs
