[package]
name = "framedrop"
version = "0.1.0"
description = "FrameDrop - Automatic RAW Photo Ingestion"
authors = ["you"]
edition = "2021"

[lib]
name = "framedrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
chrono = "0.4"
exif = { package = "kamadak-exif", version = "0.5" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
lofty = "0.21"

[target.'cfg(windows)'.dependencies]
wmi = { version = "0.14", features = [] }
